# graphrag_neo4j

./: .gitignore  LICENSE  README.md  bee_movie_script.py  chapter_1.py  chapter_2.py  db_setup.py  embedder.py  example.env  ingestion.py  main.py  moby_dick_text.py  pyproject.toml  search.py  store.py
graphrag_neo4j/: chapter_1.py  chapter_2.py  db_setup.py  embedder.py  ingestion.py  search.py  store.py
